# MindBox_Tasks

Mindbox_task_1/: .gitignore  README.md  pyproject.toml  test.py
Mindbox_task_1/geometry_lib/: main.py
Mindbox_task_1/geometry_lib/geometry/: __init__.py  factory.py  figures.py
Mindbox_task_1/tests/: test_figures.py
Mindbox_task_2/: .gitignore  README.md
Mindbox_task_2/src/: main.py  product_category.py
Mindbox_task_2/tests/: test_product_category.py
