[project]
name = "geometrylib"
version = "0.1.0"
description = "Библиотека для расчета площади геометрических фигур"
authors = [{ name = "Авторханов Ахмед", email = "muslimgreen94@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/Avtorhanov/MindBox_Tasks.git"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["geometry_lib"]
